--- a/Tinchant.Security.Api/appsettings.json
+++ b/Tinchant.Security.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "UserAggregation": "Server=localhost;Database=UserAggregation;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=SSPI;Encrypt=false;"
+  },
   "AllowedHosts": "*"
 }
